--- a/identify/templates/line_login.html
+++ b/identify/templates/line_login.html
@@ -7,7 +7,7 @@
             var URL = 'https://access.line.me/oauth2/v2.1/authorize?';
             URL += 'response_type=code';
             URL += '&client_id=1656730482';
-            URL += '&redirect_uri=http://localhost:5000/1';
+            URL += '&redirect_uri=https://linebotlawrence.herokuapp.com//1';
             URL += '&state=0222';
             URL += '&scope=openid%20profile';
             window.location.href = URL;
