--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -61,7 +61,7 @@
                 <input type="submit" value="確定" onclick="">
             </form>
         </div>
-        <img src="qrcode.png"  with="400" heigh="400" alt="qrcode">
+        <img src="https://qr-official.line.me/sid/L/218zdunr.png">   
     </div>
 </body>
 
