--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -41,6 +41,9 @@
                     <label><input type="checkbox" name="cooker" value="cooker">家庭主婦</label>
                 </div>
                 <div>
+                    
+                </div>
+                <div>
                     <textarea class="Inputarea" name="text" cols="30" rows="10"></textarea>
                 </div>
                 <input type="submit" value="確定" onclick="">
