--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -41,7 +41,9 @@
                     <label><input type="checkbox" name="cooker" value="cooker">家庭主婦</label>
                 </div>
                 <div>
-                    <input type="submit" value="確定" onclick="">
+                    {% for i in range(11) %}
+                    {{ i }}
+                    {% endfor %}
                 </div>
                 <div>
                     <textarea class="Inputarea" name="text" cols="30" rows="10"></textarea>
@@ -64,7 +66,7 @@
                 <input type="submit" value="確定" onclick="">
             </form>
         </div>
-        <img src="https://qr-official.line.me/sid/L/218zdunr.png">   
+        <img src="https://qr-official.line.me/sid/L/218zdunr.png">
     </div>
 </body>
 
