--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="checkbox">
                         <label>分類:</label>
-                        <label><input type="checkbox" name="student" value="student">學生族群</label>
+                        <label><input type="checkbox" name="student" value="student" onclick="onclick1()">學生族群</label>
                         <label><input type="checkbox" name="worker" value="worker">上班族群</label>
                         <label><input type="checkbox" name="cooker" value="cooker">家庭主婦</label>
                     </div>
