--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="checkbox">
                         <label>分類:</label>
-                        <label><input type="checkbox" name="student" value="student" onclick="onclick1()">學生族群</label>
+                        <label><input type="checkbox" name="student" value="student">學生族群</label>
                         <label><input type="checkbox" name="worker" value="worker">上班族群</label>
                         <label><input type="checkbox" name="cooker" value="cooker">家庭主婦</label>
                     </div>
@@ -53,6 +53,38 @@
                 <input type="submit" value="確定" onclick="">
             </form>
         </div>
+
+
+
+
+
+        <div class="GroupTextText">
+            <form action="/manager/GroupMail/iden" method="get">
+                <div class="checkbox">
+                    <label>分類:</label>
+                    <label><input type="checkbox" name="student" value='student'>學生族群</label>
+                    <label><input type="checkbox" name="worker" value="worker">上班族群</label>
+                    <label><input type="checkbox" name="cooker" value="cooker">家庭主婦</label>
+                </div>
+            </form>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <div class="PersonText">
             <form action="/manager/PrivateMessage" method="post">
                 <div class="list">
