--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -61,10 +61,10 @@
         <div class="GroupTextText">
             <form action="/manager/GroupMail/iden" method="get">
                 <div class="checkbox">
-                    <label>分類:</label>
-                    <label><input type="checkbox" name="student" value='student'>學生族群</label>
-                    <label><input type="checkbox" name="worker" value="worker">上班族群</label>
-                    <label><input type="checkbox" name="cooker" value="cooker">家庭主婦</label>
+                    <label>新的分類:</label>
+                    <label><input type="checkbox" name="student" value='student' onclick="">學生族群</label>
+                    <label><input type="checkbox" name="worker" value="worker" onclick="">上班族群</label>
+                    <label><input type="checkbox" name="cooker" value="cooker" onclick="">家庭主婦</label>
                 </div>
             </form>
         </div>
