--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -59,10 +59,10 @@
 
 
         <div class="GroupTextText">
-            <form action="/manager/GroupMail/iden" method="get">
+            <form action="/manager/GroupMail/iden" method="post">
                 <div class="checkbox">
                     <label>新的分類:</label>
-                    <label><input type="checkbox" name="student" value='student' >學生族群</label>
+                    <label><input type="checkbox" name="student" value='student' onclick="">學生族群</label>
                     <label><input type="checkbox" name="worker" value="worker" >上班族群</label>
                     <label><input type="checkbox" name="cooker" value="cooker" >家庭主婦</label>
                 </div>
