--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -66,6 +66,7 @@
                     <label><input type="checkbox" name="worker" value="worker" >上班族群</label>
                     <label><input type="checkbox" name="cooker" value="cooker" >家庭主婦</label>
                 </div>
+                <input type="submit" value="確定" onclick="">
             </form>
         </div>
 
