--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -68,7 +68,7 @@
                 </div>
                 <div>
                     {% for user in user_info %}
-                        {{ user_info[1] }}
+                        {{ user[1] }}
                     {% endfor %}
                 </div>
 
