--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -68,7 +68,9 @@
                 </div>
                 <div>
                     {% for user in user_info %}
+                    <div>
                         {{ user[1] }}
+                    </div>
                     {% endfor %}
                 </div>
 
