--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <div>使用者分群：</div>
     <div class="contanier">
         <form action="/manager/Grouping" method="post">
             <div class="group">
@@ -32,6 +32,7 @@
                 </form>
             </div>
         </form>
+        <div>群發訊息：</div>
         <div class="GroupText">
             <form action="/manager/GroupMail" method="post">
                 <div class="checkbox">
@@ -58,7 +59,7 @@
 
 
 
-        <div class="GroupTextText">
+        <!-- <div class="GroupTextText">
             <form action="/manager/GroupMail/iden" method="post">
                 <div class="checkbox">
                     <label>新的分類:</label>
@@ -75,24 +76,10 @@
                 </div>
                 <input type="submit" value="確定" onclick="">
             </form>
-        </div>
+        </div> -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div>個別私訊：</div>
         <div class="PersonText">
             <form action="/manager/PrivateMessage" method="post">
                 <div class="list">
