--- a/manager/templates/manager.html
+++ b/manager/templates/manager.html
@@ -32,6 +32,7 @@
                 </form>
             </div>
         </form>
+        <div>----------------------------------------</div>
         <div>群發訊息：</div>
         <div class="GroupText">
             <form action="/manager/GroupMail" method="post">
@@ -78,7 +79,7 @@
             </form>
         </div> -->
 
-
+        <div>----------------------------------------</div>
         <div>個別私訊：</div>
         <div class="PersonText">
             <form action="/manager/PrivateMessage" method="post">
